--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       - ./logs:/opt/airflow/logs
       - ./sql:/opt/airflow/sql
       - ./db:/opt/airflow/db    
+      - ./ml:/opt/airflow/ml
       - /var/run/docker.sock:/var/run/docker.sock
       - ${TABLEAU_EXPORT_PATH}:/opt/airflow/src/tableau/hyper_exports
     ports:
@@ -81,7 +82,8 @@ services:
       - ./src:/opt/airflow/src
       - ./logs:/opt/airflow/logs
       - ./sql:/opt/airflow/sql
-      - ./db:/opt/airflow/db     
+      - ./db:/opt/airflow/db   
+      - ./ml:/opt/airflow/ml
       - /var/run/docker.sock:/var/run/docker.sock
       - ${TABLEAU_EXPORT_PATH}:/opt/airflow/src/tableau/hyper_exports
     command: scheduler
