added extraction method for cast and crew, updated readme with disclaimer. Removed json tableau files.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ derby.log
 *.swp
 *.tmp
 ml/multi_label_classification/*.joblib
+# Ignore all Tableau export JSON files
+src/tableau/hyper_exports/*.json
