--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     ports:
       - "8080:8080"
+    volumes:
+      - ./dags:/opt/airflow/dags
     command: webserver
 
   airflow-scheduler:
@@ -37,3 +39,5 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PW}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
     command: scheduler
+    volumes:
+      - ./dags:/opt/airflow/dags
