--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - airflow_net
 
   pgadmin:
     image: dpage/pgadmin4
@@ -25,7 +27,8 @@ services:
       - "5050:80"
     depends_on:
       - postgres
-
+    networks:
+      - airflow_net
 
   airflow-webserver:
     image: apache/airflow:2.7.1-python3.10
@@ -59,6 +62,8 @@ services:
     ports:
       - "8080:8080"
     command: webserver
+    networks:
+      - airflow_net
 
   airflow-scheduler:
     build: .
@@ -82,6 +87,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${TABLEAU_EXPORT_PATH}:/opt/airflow/src/tableau/hyper_exports
     command: scheduler
+    networks:
+      - airflow_net
 
 volumes:
   postgres_data:
+
+networks:
+  airflow_net:
