updating imports and variable getters

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "5050:80"
 
   airflow-webserver:
-    image: apache/airflow:2.7.1-python3.10
+    image: my-airflow-ml:latest
     container_name: airflow-webserver
     restart: always
     env_file:
@@ -34,7 +34,7 @@ services:
     command: webserver
 
   airflow-scheduler:
-    image: apache/airflow:2.7.1-python3.10
+    image: my-airflow-ml:latest
     container_name: airflow-scheduler
     restart: always
     env_file:
