--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "5050:80"
 
   airflow-webserver:
+    build: .
     image: my-airflow-ml:latest
     container_name: airflow-webserver
     restart: always
@@ -34,6 +35,7 @@ services:
     command: webserver
 
   airflow-scheduler:
+    build: .
     image: my-airflow-ml:latest
     container_name: airflow-scheduler
     restart: always
